[package]
name = "ext"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"
description = "Compute Ext over the Steenrod algebra"
repository = "https://github.com/SpectralSequences/ext/"
license = "(MIT OR Apache-2.0)"

[dependencies]
algebra = { path = "crates/algebra" }
bivec = { path = "crates/bivec"}
enum_dispatch = "<=0.3.2" # There's a bug in 0.3.3: https://gitlab.com/antonok/enum_dispatch/-/issues/34
error = { path = "crates/error"}
fp = { path = "crates/fp" }
lazy_static = "1.2.0"
lock_api = "0.4.2"
nom = "6.1.2"
once = { path = "crates/once"}
parking_lot = "0.11.1"
saveload = { path = "crates/saveload" }
query = { path = "crates/query" }
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
# syn = "=1.0.57"
thread-token = { path = "crates/thread-token", optional = true }
time = "0.2.9"

[target.'cfg(not(target_arch = "wasm32-unknown-unknown"))'.dependencies.clap]
version = "2.33.0"
default-features = false
features = ["yaml", "wrap_help", "color"]

[dev-dependencies]
rstest = "0.6.4"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 3
debug = true

[features]
cache-multiplication = []
concurrent = ["thread-token"]
prime-two = ["fp/prime-two"]
