[package]
name = "ext"
version = "0.1.0"
authors = [
    "Hood Chatham <hood@mit.edu>",
    "Dexter Chua <dexter@math.harvard.edu>",
    "Joey Beauvais-Feisthauer <joeybf@wayne.edu>",
]
edition = "2024"
description = "Compute Ext over the Steenrod algebra"
repository = "https://github.com/SpectralSequences/ext/"
license = "(MIT OR Apache-2.0)"
resolver = "2"

[dependencies]
algebra = { path = "crates/algebra", default-features = false }
bivec = { path = "crates/bivec" }
fp = { path = "crates/fp", default-features = false }
maybe-rayon = { path = "crates/maybe-rayon" }
once = { path = "crates/once" }
query = { path = "crates/query" }
sseq = { path = "crates/sseq", default-features = false }

adler = "1"
anyhow = "1.0.98"
bitcode = { version = "0.6", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
byteorder = "1.5.0"
dashmap = "6.1.0"
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
rustc-hash = "2.1.1"
serde_json = { version = "1.0.141", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

zstd = { version = "0.13.3", optional = true }

# Zarrs is declared twice with target-specific feature sets. On native targets we enable the
# `filesystem` feature so the save system persists to disk; on `wasm32-unknown-unknown` we
# disable it because `zarrs_filesystem` pulls in `positioned-io::RandomAccessFile`, which is
# gated to `cfg(any(windows, unix))` and doesn't compile for WASM. The WASM build falls back
# to an in-memory store (see `src/save/zarr.rs`).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zarrs = { version = "0.23", default-features = false, features = ["filesystem", "sharding", "crc32c", "zstd"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
zarrs = { version = "0.23", default-features = false, features = ["sharding", "crc32c", "zstd"] }

[target.'cfg(unix)'.dependencies]
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
expect-test = "1.5.1"
rstest = "0.25.0"
tempfile = "3.20.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["odd-primes"]
cache-multiplication = ["algebra/cache-multiplication"]
concurrent = [
    "algebra/concurrent",
    "fp/concurrent",
    "maybe-rayon/concurrent",
    "once/concurrent",
    "sseq/concurrent",
]
odd-primes = ["fp/odd-primes", "algebra/odd-primes", "sseq/odd-primes"]
logging = []
nassau = []

[workspace]
members = [
    "crates/algebra",
    "crates/bivec",
    "crates/fp",
    "crates/maybe-rayon",
    "crates/once",
    "crates/query",
    "crates/sseq",
]

[[bench]]
name = "resolve"
harness = false

[[bench]]
name = "resolve_concurrent"
harness = false

[[bench]]
name = "secondary"
harness = false

[[bench]]
name = "load_resolution"
harness = false
