[package]
name = "algebra"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
enum_dispatch = "<=0.3.2" # There's a bug in 0.3.3: https://gitlab.com/antonok/enum_dispatch/-/issues/34
itertools = "0.10.0"
lazy_static = "1.2.0"
lock_api = "0.4.2"
nom = "6.1.2"
parking_lot = "0.11.1"
twox-hash = "1.5.0"
array-macro = "2.0.0"


bivec = { path = "../bivec"}
error = { path = "../error" }
fp = { path = "../fp" }
once = { path = "../once" }
query = { path = "../query" }
saveload = { path = "../saveload" }

[dev-dependencies]
rand = "0.8.3"
rstest = "0.6.4"
bencher = "0.1.5"

[features]
prime-two = []
