[package]
name = "algebra"
version = "0.1.0"
authors = [
    "Hood Chatham <hood@mit.edu>",
    "Dexter Chua <dexter@math.harvard.edu>",
]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bivec = { path = "../bivec" }
fp = { path = "../fp", default-features = false }
once = { path = "../once" }

anyhow = "1.0.75"
auto_impl = "1.1.0"
hashbrown = "0.14.2"
itertools = { version = "0.12.0", default-features = false, features = [
    "use_alloc",
] }
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }

rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
bencher = "0.1.5"
expect-test = "1.4.1"
rstest = "0.18.2"

[features]
default = ["odd-primes", "json"]
cache-multiplication = []
concurrent = ["rayon", "fp/concurrent"]
json = ["serde", "serde_json", "bivec/json", "fp/json"]
odd-primes = ["fp/odd-primes"]

[[bench]]
name = "milnor"
harness = false
