[package]
name = "fp"
version = "0.1.0"
authors = ["Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.0", optional = true }
serde = { version = "1.0.0", optional = true }
enum_dispatch = "0.3.5"
saveload = { path = "../saveload" }
itertools = "0.10.0"

[dev-dependencies]
rand = "0.8.3"
rstest = "0.6.4"
bencher = "0.1.5"

[features]
prime-two = []
json = ["serde_json", "serde"]

[[bench]]
name = "bench"
harness = false
