[package]
name = "fp"
version = "0.1.0"
authors = ["Dexter Chua <dexter@math.harvard.edu>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_const = "0.2.2"
byteorder = "1.5.0"
cfg-if = "1.0.0"
itertools = { version = "0.12.0", default-features = false }
serde = { version = "1.0.193", optional = true }
serde_json = { version = "1.0.108", optional = true }

rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
expect-test = "1.4.1"
iai = "0.1.1"
proptest = "1.4.0"
rand = "0.8.5"
rstest = "0.18.2"

[build-dependencies]
build_const = "0.2.2"

[features]
default = ["odd-primes"]
concurrent = ["rayon"]
json = ["serde_json", "serde"]
odd-primes = []

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
