[package]
name = "once"
version = "0.1.0"
authors = [
    "Hood Chatham <hood@mit.edu>",
    "Dexter Chua <dexter@math.harvard.edu>",
]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bivec = { path = "../bivec" }
dashmap = { version = "6.1.0", features = ["serde"] }
fxhash = "0.2.1"
maybe-rayon = { path = "../maybe-rayon" }
nohash-hasher = "0.2.0"
rand = "0.9.0"

[dev-dependencies]
criterion = "0.5.1"
loom = { version = "0.7.2", features = ["checkpoint"] }
pprof = { version = "0.14.0", features = ["criterion", "flamegraph"] }

[features]
default = []
concurrent = ["maybe-rayon/concurrent"]
loom = []

[[bench]]
name = "criterion"
harness = false
