[package]
name = "sseq"
version = "0.1.0"
authors = ["Dexter Chua <dec41@srcf.net>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra/", default-features = false }
bivec = { path = "../bivec/" }
chart = { path = "../chart/" }
fp = { path = "../fp/", default-features = false }
once = { path = "../once/" }

rayon = { version = "1.8.0", optional = true }
serde = { version = "1.0.193", optional = true }
serde_json = { version = "1.0.108", optional = true }

[dev-dependencies]
expect-test = "1.4.1"
rand = "0.8.5"

[features]
default = ["odd-primes"]
concurrent = ["rayon"]
json = ["serde_json", "serde"]
odd-primes = ["fp/odd-primes"]
